# TCBee

./: LICENSE  Makefile  NOTICES  README.md  tcbee
.github/workflows/: release.yml  tcbee.yml
examples/db/: README.md  list_flows.py  plot_cwnd.py
examples/raw/: identify_flows.py  plot_cwnd.py  read_cubic_events.py
scripts/: regenerate-bindings.sh
tcbee-live/: Cargo.toml  README.md
tcbee-live/tcbee-live/: Cargo.toml  build.rs
tcbee-live/tcbee-live-common/: Cargo.toml
tcbee-live/tcbee-live-common/src/: lib.rs  tcp_sock.rs
tcbee-live/tcbee-live-ebpf/: Cargo.toml
tcbee-live/tcbee-live-ebpf/src/: main.rs  probe.rs
tcbee-live/tcbee-live/src/: app.rs  main.rs  types.rs  worker.rs
tcbee-process/: Cargo.toml  run.sh
tcbee-process/src/: db_writer.rs  flow_tracker.rs  ip.rs  main.rs  reader.rs
tcbee-process/src/bindings/: bbr.rs  cubic.rs  cwnd.rs  event_indexer.rs  sock.rs  tcp4_packet.rs  tcp6_packet.rs  tcp_packet.rs  tcp_probe.rs
tcbee-record/: Cargo.toml  README.md  run.sh
tcbee-record/kernel-read-derive/: Cargo.toml
tcbee-record/kernel-read-derive/src/: lib.rs
tcbee-record/tcbee/: Cargo.toml  build.rs
tcbee-record/tcbee-common/: Cargo.toml
tcbee-record/tcbee-common/src/: filter.rs  kread.rs  lib.rs  prog_bindings.rs
tcbee-record/tcbee-common/src/bindings/: bbr.rs  common.rs  cubic.rs  eth_header.rs  flow.rs  ip4_header.rs  ip6_header.rs  mod.rs  tcp_bad_csum.rs  tcp_header.rs  tcp_probe.rs  tcp_retransmit_synack.rs  tcp_sock.rs
tcbee-record/tcbee-ebpf/: Cargo.toml
tcbee-record/tcbee-ebpf/src/: config.rs  counters.rs  filter.rs  flow_tracker.rs  helpers.rs  main.rs
tcbee-record/tcbee-ebpf/src/probes/: bbr.rs  cubic.rs  tc.rs  tcp_bad_csum.rs  tcp_probe.rs  tcp_retransmit_synack.rs  tcp_socket.rs
tcbee-record/tcbee-trace/: Cargo.toml
tcbee-record/tcbee-trace/src/: lib.rs
tcbee-record/tcbee/src/: main.rs  writer.rs
tcbee-record/tcbee/src/eBPF/: ebpf_runner.rs  ebpf_runner_config.rs  errors.rs  mod.rs
tcbee-record/tcbee/src/eBPF/probes/: bbr.rs  cubic.rs  cwnd.rs  headers.rs  kernel.rs  mod.rs  tracepoints.rs
tcbee-record/tcbee/src/viz/: ebpf_watcher.rs  file_tracker.rs  flow_tracker.rs  mod.rs  rate_watcher.rs
tcbee-record/tcbee/src/viz/components/: graph.rs  mod.rs  status.rs
tcbee-viz/: Cargo.toml
tcbee-viz/src/: app.rs  main.rs  settings.rs
tcbee-viz/src/backend/: db.rs  mod.rs
tcbee-viz/src/backend/plugin/: mod.rs  plugin_dummy.rs  plugin_tcp_derived.rs  plugin_upper_window.rs  trait_plugin.rs
tcbee-viz/src/data/: mod.rs  plot_state.rs  preprocessing.rs  series_data.rs
tcbee-viz/src/ui/: flow_table.rs  mod.rs  series_table.rs  tab_home.rs  tab_multi_flow.rs  tab_process.rs  tab_settings.rs  tab_single_flow.rs  theme.rs
testing/: README.md  run.py  run.sh  run_bbr_double.sh  run_bbr_single.sh  run_cubic_double.sh  run_cubic_single.sh  topology.py
ts-storage/: .gitignore  Cargo.toml  README.md
ts-storage/src/: lib.rs
ts-storage/src/duckdb/: cursor.rs  db.rs  queries.rs
ts-storage/src/error/: mod.rs
ts-storage/src/sqlite/: cursor.rs  db.rs  mod.rs  queries.rs
ts-storage/tests/: duckdb.rs  sqlite.rs
