[package]
name = "tcbee-process"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ts_storage = { path = "../ts-storage"}
tcbee-trace = { path = "../tcbee-record/tcbee-trace" }
#tcbee-common = { path = "../tcbee/tcbee-common" }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "io-util","fs"] }
tokio-util = "0.7.13"
log = "0.4.22"
#sqlx = {version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
indicatif = "0.17.11"
env_logger = "0.11.6"
bincode = "1.3.3"
argparse = "0.2.2"
