[package]
name = "tcbee"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tcbee-common = { path = "../tcbee-common", features = ["user"]  }
tcbee-trace = { path = "../tcbee-trace" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time","fs","io-util"] }
tokio-util = "0.7.12"
thiserror = "2.0.4"
serde = "1.0.217"
ratatui = "0.29.0"
crossterm = "0.28.1"
argparse = "0.2.2"
glob = "0.3.2"
bincode = "1.3.3"
serde_json = "1.0.141"
memmap2 = "0.9.4"

[build-dependencies]
anyhow = { workspace = true, default-features = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
tcbee-ebpf = { path = "../tcbee-ebpf" }

[[bin]]
name = "tcbee-record"
path = "src/main.rs"
